--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - pip install coveralls
 
 script:
-  - coverage run --source=maps manage.py test
+  - coverage run --source=maps --omit=maps/migrations/* manage.py test
 
 after_success:
   - coveralls
