--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 Django==1.6.1
 South==0.8.4
-psycopg2==2.5.2
-wsgiref==0.1.2
 coverage==3.7.1
+django-tastypie==0.11.0
+execnet==1.1
+pep8==1.4.6
+psycopg2==2.5.2
+py==1.4.19
+pytest==2.5.1
+pytest-cache==1.0
+python-dateutil==2.2
+python-mimeparse==0.1.4
+six==1.5.2
+wsgiref==0.1.2
