--- a/static/bower.json
+++ b/static/bower.json
@@ -10,7 +10,8 @@
     "angular-resource": "1.2.6",
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
-    "angular-route": "1.2.6"
+    "angular-route": "1.2.6",
+    "closure-library": "git+https://code.google.com/p/closure-library/"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
