--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.6.1
 South==0.8.4
 coverage==3.7.1
 django-angular==0.5.0
+django-forms-bootstrap==2.0.3.post2
 django-tastypie==0.11.0
 execnet==1.1
 psycopg2==2.5.2
