--- a/static/bower.json
+++ b/static/bower.json
@@ -13,7 +13,9 @@
     "closure-library": "git+https://code.google.com/p/closure-library/",
     "jquery-ui": "1.10.3",
     "angular-ui-select2": "",
-    "select2": "~3.4.5"
+    "select2": "~3.4.5",
+    "leaflet-dist": "~0.7.2",
+    "angular-leaflet-directive": "~0.7.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
